--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "ckeeditor": "git://github.com/ckeditor/ckeditor-releases.git#standard/stable",
     "dropzone": "~4.2.0",
     "backbee-core-js": "~0.1.*",
-    "multiselect-two-sides": "~2.2.9"
+    "multiselect-two-sides": "~2.2.9",
+    "cropper": "~2.3.0"
   },
   "devDependencies": {
     "uri.js": "~1.14.1",
