--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-istanbul-coverage": "0.0.5",
-    "grunt-jslint": "^1.1.12",
+    "grunt-jslint": "1.1.13",
     "grunt-lesslint": "~1.1.13",
     "grunt-shell": "^1.1.2",
     "has-ansi": "^1.0.3",
